Closed Bug 1887261 Opened 2 years ago Closed 2 years ago

Clip path should be scaled by zoom (was: Failing WPT css/css-masking/clip-path/animations/clip-path-path-interpolation-with-zoom.html)

Categories

(Core :: SVG, defect, P3)

defect

Tracking

()

RESOLVED FIXED
126 Branch
Tracking Status
firefox126 --- fixed

People

(Reporter: twisniewski, Assigned: emilio)

References

(Blocks 1 open bug, )

Details

Attachments

(1 file)

Blocks: csszoom
Summary: Failing WPT css/css-masking/clip-path/animations/clip-path-path-interpolation-with-zoom.html → Clip path should be scaled by zoom (was: Failing WPT css/css-masking/clip-path/animations/clip-path-path-interpolation-with-zoom.html)
Severity: -- → S3
Priority: -- → P3

Tweak some tests to use strings that all browsers understand. I asked
boris about the syntax difference in bug 1887263 (but it might be a
Chrome / Safari bug, haven't gone through the svg 1.1 path syntax yet).

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5f7f5ec23e29 Make clip-path: path() react to zoom. r=longsonr
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/45298 for changes under testing/web-platform/tests

(In reply to Emilio Cobos Álvarez (:emilio) from comment #1)

Tweak some tests to use strings that all browsers understand. I asked
boris about the syntax difference in bug 1887263 (but it might be a
Chrome / Safari bug, haven't gone through the svg 1.1 path syntax yet).

It is a Chrome / Safari bug. Commas are only allowed between pairs of numbers.

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch
Regressions: 1887537
Component: Layout → SVG
Upstream PR was closed without merging
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: