Bug 1887261 - Make clip-path: path() react to zoom. r=longsonr

Tweak some tests to use strings that all browsers understand. I asked
boris about the syntax difference in bug 1887263 (but it might be a
Chrome / Safari bug, haven't gone through the svg 1.1 path syntax yet).

Differential Revision: https://phabricator.services.mozilla.com/D205516